# PortifolioAPI

./: CONTRIBUTING.md  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
portifolio/portifolio/: settings.py
